--- a/src/Day2_HTML/Task/PersonalInformation.html
+++ b/src/Day2_HTML/Task/PersonalInformation.html
@@ -31,6 +31,14 @@
             <label for="radioButton2"> Male </label>
             <input id="radioButton2" name="gender" type="radio"> <br> <br>
 
+            <select id=countryDropdown" name="countries">
+
+                <option value="USA"> United States </option>
+                <option value="FR" > France </option>
+                <option value="GER"> Germany </option>
+                <option value="ITA"> Italy </option>
+
+            </select> <br> <br>
             <input id="submit" type="submit">
 
 
