HTML Basics - Form and Input Tags

--- a/src/Day2_HTML/Task/PersonalInformation.html
+++ b/src/Day2_HTML/Task/PersonalInformation.html
@@ -31,7 +31,8 @@
             <label for="radioButton2"> Male </label>
             <input id="radioButton2" name="gender" type="radio"> <br> <br>
 
-            <select id=countryDropdown" name="countries">
+            <label for="countryDropdown"> Country:</label>
+            <select id="countryDropdown" name="countries">
 
                 <option value="USA"> United States </option>
                 <option value="FR" > France </option>
