HTML Basics - Image

--- a/src/Day2_HTML/Task/PersonalInformation.html
+++ b/src/Day2_HTML/Task/PersonalInformation.html
@@ -42,6 +42,8 @@
             </select> <br> <br>
             <input id="submit" type="submit">
 
+            <img src="HTML.jpg" width="500px">
+
 
 
 
