HTML Basics - CSS Selectors

--- a/src/Day3_CSSselector/generalSiblings/index.html
+++ b/src/Day3_CSSselector/generalSiblings/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <title>index</title>
     <style>
-
-
-
-        .one { background: blue }
-        .originalClass {border: 2px solid red}
-
+        p ~ ul { background: lightyellow; }
     </style>
+
 </head>
 <body>
-
 <div id="xflch-container">
     <ul>
         <li> List Item</li>
@@ -27,7 +22,7 @@
         <p> My paragraph here. </p>
     </div>
 
-    <div class="uniqueClass">
+    <div class="one two">
         <p> Two paragraphs total. </p>
         <p> Two paragraphs total. </p>
     </div>
@@ -53,8 +48,8 @@
 </div>
 
 <div id="xfot-container">
-    <div class="originalClass">
-        <p class="originalClass"> My paragraph here. </p>
+    <div class="one">
+        <p> My paragraph here. </p>
         <ul>
             <li> List Item 1</li>
             <li> List Item 2</li>
