--- a/src/Day3_CSSselector/descendants/index.html
+++ b/src/Day3_CSSselector/descendants/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+
+
     <style>
-
-
-
-        .one { background: blue }
-        .originalClass {border: 2px solid red}
-
+      #xot-container p { background: red }
     </style>
+
 </head>
 <body>
-
 <div id="xflch-container">
     <ul>
         <li> List Item</li>
@@ -27,7 +24,7 @@
         <p> My paragraph here. </p>
     </div>
 
-    <div class="uniqueClass">
+    <div class="one two">
         <p> Two paragraphs total. </p>
         <p> Two paragraphs total. </p>
     </div>
@@ -53,8 +50,8 @@
 </div>
 
 <div id="xfot-container">
-    <div class="originalClass">
-        <p class="originalClass"> My paragraph here. </p>
+    <div class="one">
+        <p> My paragraph here. </p>
         <ul>
             <li> List Item 1</li>
             <li> List Item 2</li>
@@ -65,7 +62,4 @@
             <li> List Item 4</li>
         </ul>
     </div>
-
-</div>
-</body>
 </html>
